--- a/paper/onion.tex
+++ b/paper/onion.tex
@@ -1,4 +1,6 @@
 \documentclass{sig-alternate}
+\usepackage{enumitem}
+
 
 % Remove copyright block
 \makeatletter
@@ -7,44 +9,32 @@
 
 \begin{document}
 
-\title{Onion Routing}
+\title{Onion Routing and Low Latency Network Anonymization Mechanisms}
 \subtitle{Advanced Internet Computing WS 2014 \\ Group 6, Topic 3}
 
 \numberofauthors{5}
 
 \author{
 \alignauthor
-Ben Trovato\\
-       \affaddr{Institute for Clarity in Documentation}\\
-       \affaddr{1932 Wallamaloo Lane}\\
-       \affaddr{Wallamaloo, New Zealand}\\
-       \email{trovato@corporation.com}
+Fabian Theuretzbacher\\
+       \email{e1426066}
 % 2nd. author
 \alignauthor
-G.K.M. Tobin\\
-       \affaddr{Institute for Clarity in Documentation}\\
-       \affaddr{P.O. Box 1212}\\
-       \affaddr{Dublin, Ohio 43017-6221}\\
-       \email{webmaster@marysville-ohio.com}
+Daniel Achleitner\\
+       \email{e0926807}
 % 3rd. author
-\alignauthor Lars Th{\o}rv{\"a}ld\\
-       \affaddr{The Th{\o}rv{\"a}ld Group}\\
-       \affaddr{1 Th{\o}rv{\"a}ld Circle}\\
-       \affaddr{Hekla, Iceland}\\
-       \email{larst@affiliation.org}
+\alignauthor Florian Kleedorfer\\
+       \email{e9700159}
 \and  % use '\and' if you need 'another row' of author names
 % 4th. author
-\alignauthor Lawrence P. Leipuner\\
-       \affaddr{Brookhaven Laboratories}\\
-       \affaddr{Brookhaven National Lab}\\
-       \affaddr{P.O. Box 5000}\\
-       \email{lleipuner@researchlabs.org}
+\alignauthor Gertraud Forsthuber\\
+       \email{e0502105}
 % 5th. author
-\alignauthor Sean Fogarty\\
-       \affaddr{NASA Ames Research Center}\\
-       \affaddr{Moffett Field}\\
-       \affaddr{California 94035}\\
-       \email{fogartys@amesres.org}
+\alignauthor Alexander Gruber\\
+       \email{e0625633}
+\and
+\and
+\email{E-Mail: <Mat.Nr.>@student.tuwien.ac.at}
 }
 
 \date{\today}
@@ -65,8 +55,56 @@ Onion Routing abstract.
 \keywords{Anonymity, Onion Routing}
 
 \section{Introduction}
+Onion Routing (OR) is a low-latency based mechanism for the anonymous transmission of data packets over a computer network. It was developed by M.G. Reed, P. F. Syverson and D. M. Goldschlag in 1998[XX] and is patented by the United States Navy. After its invention it became known worldwide through its use as the primary anonymization technique within the Tor network[XX]. The terminus Onion Routing origins from its transmission mechanism where a each message is encrypted several times by a client before it is submitted and is then decrypted progressively (each node removes one layer of encryption before forwarding it to the next node) along its transmission route from a client to a server. 
+
 
 \section{State of the Art}
+
+\subsection{Functional Prinicple}
+In detail, before the submission of a new message, the client first contacts a directory node, who stores a list of available transmission nodes (relays).  Then he picks a subset out of the pool of available nodes and orders them to a chain. Using asymmetric key cryptography, the client first establishes a connection to the first node of the node chain. It does so by sending a message which contains a randomly generated circuit ID in order to be able to uniquely identify the connection between the client and the first node, a “create circuit” request in order to create a circuit with the first node and the client’s part of a Diffie-Hellman handshake. The message is encrypted by the first node’s public key, which the client previously obtained from the directory node. At next, the first node of the chain replies to the client with its half of the Diffie-Hellman handshake as well as a hash of the client’s Diffie-Hellman part. Through the hash, the client can verify the authenticity of the Node. In order to keep the efficiency of the OR mechanism on an adequate level, the Diffie-Hellman secret is used to encrypt all further communication between the client and the first node symmetrically. At next, the client sends a “relay extend cell” message to the first node, containing a circuit ID which might differ from the first one, a request in order to establish a connection from the first node to the second node, and the originators credentials for another Diffie-Hellman handshake. The first node forwards this message to the second node in the chain and therefore extends the initial circuit. Like the way the first node did, the second node replies to that request with a hash of the given handshake part and adds its own half of the Diffie-Hellman handshake. The second node can only receive messages from the first node and cannot distinguish it from the initial client. Therefore the second node has no opportunity to identify its predecessor as a node within the chain or as client. As soon as the connection between both nodes is established, the first node sends a “relay extended cell” notification to the client, containing the second clients hash of the Diffie-Hellman secret, in order to inform him about the successful extension of the node chain. In the same manner as previously outlined, the “relay extend cell” procedure is repeated for every node, which was selected by the client to be a part of the transmission path. 
+In order to place a request from the client to a server, the client encrypts the message symmetrically N times, which is the same as the number of nodes N in the selected node chain. For each encryption the previously negotiated Diffie-Hellman secret for the respective node is used, which on the one hand means that each encryption layer is encrypted with a different key and on the other hand only the node, who possesses the same shared secret is able to remove the respective encryption layer. 
+After the encryption the message is transceived to the first node, where the first encryption layer (can be seen as the first layer of the onion) is removed. The result comprises of the N-1 times encrypted payload which is to be forwarded to the next node. This procedure is repeated likewise for each node until the original message is forwarded from the last node to the server. By default each node maps and stores the connection ID from the precedent chain participant with the connection ID of the subsequent participant. Therefore the client is not required to transmit the connection IDs of all connections within the message. According to the specification of the OR mechanism, the original message is sent unencrypted from the last node to the server. Nevertheless it does not matter whether the payload itself is encrypted or not as the OR methods primary aim is to anonymize the network traffic.  
+The main benefit through OR, is the reduced traceability of network traffic from outside, as by the decryption of messages within the nodes, each input packet looks different than the output packet. Furthermore through the random choice of a node chain from a pool of nodes each network path which is used by a server request and the respective response is changed. Therefore network traffic through OR is undeterminable. Except from that the public keys which are negotiated for each transaction are generated on a random basis. This as well as the undeterminable routing behavior, fulfill the requirements of perfect forward secrecy [XX].  
+
+\subsection{Security}
+
+However, after the broad public got in contact with the OR concept through its implementation within the Tor network, various scientific institutions including members of the developer team evaluated OR regarding to weakpoints, especially in connection to its use within Tor. For instance Dingledine, Syverson and Mathewson [XX] point out, that the original OR anonymization mechanism can be successfully compromised by numerous kinds of attacks, some of them shall be mentioned in the following in a short form:
+
+\begin{description} \setitemize{leftmargin=-1.5em}
+	\begin{itemize} \itemsep0pt \setitemize{leftmargin=1em}
+		\item Passive Attacks
+		\begin{itemize} \itemsep0pt 
+			\item Finding User Traffic Patterns: As a basis for further attacks.
+			\item Observing User Content: Trying to decrypt transmitted messages (especially through man-in-the-middle attacks between the end node of a chain and the server).
+			\item End-to-end timing and size correlation: Find out client server interaction through correlating the timestamps and/or the sizes of sent/received messages 
+			\item Website fingerprinting: Storing the file sizes and access patterns of requested websites in a database. Their fingerprints can be used afterwards to identify the access of a client to a database. [XX]
+		\end{itemize}
+		\item Active Attacks
+		\begin{itemize} \itemsep0pt 
+			\item Finding Compromise keys: Learning the session key for an OR chain and subsequently trying to impersonate an OR chainnode.
+			\item Impersonate components of an OR network: By impersonating either a server or a chainnode and inducing clients to connect to the fake component, attackers can gain information about the client and send false responses.
+			\item DoS attacks on network components: In order to remove certain chain nodes or servers and therefore increase the traffic value of the remaining ones (in combination with Impersonation attacks).
+			\item Tagging attacks: Similar to man-in-the-middle attack, with the difference that a sent request is tagged through alteration of its content. The damaged result from the server then implies that he received the message. 
+			\item Replay Attack: By replaying the client's part of a initial Diffie-Hellman handshake the returned connection ID is the same but with different encryption keys, which destroys the original session of a client.
+			\item Supply Chain Attack: By distributing versions of OR which are adapted to the attackers purposes. 
+		\end{itemize}
+		\item Directory Node Attacks
+			\begin{itemize} \itemsep0pt 
+			\item Destroy directory nodes: By denying the service of a directory node (e.g. through a Denial of Service attack) he can significantly reduce the performance of an OR network or even prevent its service, in case he manages to deny the service of all directory nodes.
+			\item Subvert directory nodes: By taking over a directory server, attackers can modify them for their own purposes within an OR network and are able to copy the list of chainnodes. In case an attacker has taken over more than the half of all directory nodes he can include own hostile chainnodes into the network, as the inclusion of new chainnodes is done on electoral basis and needs the approval of more than 50\% of all directorynodes in a network.
+		\end{itemize}
+	\end{itemize}
+\end{description}
+According to its specification [XX] the Tor framework adapted it’s framework to most of these challenges appropriately but had to leave some of those security issues unresolved by now. For instance even in its Tor-customized form, the OR concept is still vulnerable to end-to-end correlation attacks, where it is according to Shmatikov et al [XX] still possible to match the communication between clients and servers by correlating the timestamps and the message sizes of the client’s request and the server’s response. Tor explicitly desists from solving this issue because the OR concept as it is used in tor is a low-latency communication mechanism. Securing this issue would imply a massive increase in latency times and therefore render communication via SSH, VPN or chat communication unusable. Another issue are Eavesdropping attacks (in this context also known as exit node sniffing), where attackers copy the plaintext communication between the end node of a node chain and the server. This attack had already been successfully used to compromise the Tor network [XX] and is possible as the Tor framework is per design unable to include end-to-end encryption into its communication mechanism. Compared to the original OR concept, this weakness rather belongs to the Tor framework as in the original OR concept this issue would be resolvable by simply encrypting the payload before sending it. Another type of attack, defined by Wright, Adler and Levine [XX] are predecessor attacks which do not only affect the OR concept but also network based anonymization mechanisms in general. Using the method of predecessor attacks (which is in general a traffic analysis attack), an attacker searches for identifiable communication streams and tracks them along their way from node to node. He does so by logging the nodes activities from outside and identifying chains through timing and size analysis. In the case of OR it is feasible to log the activity of the entry node of a chain as well as the end node. In general if a client communicates with a server, he opens a session whose communication is routed in TCP messages over several chains. In the course of that session it is possible to gain information about the communication pattern of the client and gain therefore insights into the routing behavior of the client. This information can then be used to conduct more targeted attacks on the client as well as the OR network. A countermeasure would be either to send dummy messages across different dummy chains in order to deceive the attacker and show a different routing pattern, or to introduce delaying mechanisms by queuing messages in a chain node before forwarding them or by delaying them over a random period of time. The former countermeasure would increase data traffic in Tor networks massively and the latter one would increase response latencies greatly, which in turn would decline the user experience and might drive time dependent applications into malfunction. 
+
+\subsection {Related Work}
+ \subsubsection {Mix Nets}
+Compared to the Onion Routing concept there are also other approaches which are partly older than OR. One of the first basic network anonymization protocols are mix networks [XX]. In fact the idea behind the OR concept is based on mix networks and both concepts show many parallels. The mechanism was developed in 1981 by David Chaum and uses a network of chain nodes (mixes), who shuffle the sequence in which received messages are forwarded through several mix nodes to a receiver. In order to send a message, the sender encrypts a message using the public key of the receiver. Afterwards he further encrypts the message with the public keys of the mixes. As soon as the message is sent and arrives at the first mixer, he decrypts the first layer of encryption and is therefore able to recover the encrypted payload as well as the address of the next mixer, to which he forwards the payload. So all in all the idea of onion routing is strongly inspired by mix networks as the mechanism is the same in both technologies. However, the difference between both concepts is, that in comparison to OR, a mixer does not immediately forward a received message to its successor. Furthermore, the sender appends a random value to the plain text message before encrypting and sending it. The random value acts as a salt in order to increase the length of the message to a standardized size. The salted message is subsequently encrypted with the receiver’s public key and the result is extended by the receiver’s address and then again wrapped into one or several encryption layers using the mixes public keys. Within each encryption layer a random value is added to the payload as a salt. Similarly to the OR concept, each mix node along a message’s way from the sender to the receiver unwraps one layer of encryption from the message with its own private key. As result he gets the salt, the payload as well as the address of the next mix node. The salt is discarded and the payload is forwarded after a random delay time. Mix networks use salting of the messages in order to keep the sizes of sent packets equal. Otherwise an attacker could associate a message A received by a node with the decrypted message A’, which is forwarded to the next node, by simply comparing the message sizes. The consequence is that he could track a message along its path. However, harmonizing the lengths of transmitted messages make size correlation attacks at the nodes as well as from end to end impossible for an attacker. Compared to Onion Routing, mix nets cover the sender’s identity from a receiver by disguising the address of the sender. As a message is handed over to the receiver, he obtains the payload as well as an encrypted form of the sender’s address. The address is likewise to the payload complemented with a random salt in order to prevent identification of the sender through its address length and encrypted with the mix nodes’ public keys. The receiver answers to a request by a message which is also salted and encrypted a public one time key. Both the encrypted sender address as well as the response are returned to the mix nets, who unwrap the sender’s address along the mix node chain but are not able to decrypt the response message itself. Compared to the OR concept, mix nets prevent time analysis as well as size correlation attacks (traffic analysis) at the nodes as well as from end to end by randomly delaying messages and standardizing their sizes. Nevertheless, the tradeoff of the nodes’ message shuffling are increased latency times, which means that the OR concept is much better performing in this aspect. 
+
+\subsubsection {Garlic Routing}
+According to Dingledine [XX] anonymity channels such as anonymity networks should (except from anonymity) satisfy the requirements of low latency, delivery robustness and resistance to traffic analysis attacks. As the vulnerability to traffic analysis is per design one of the major weakpoints in OR, this concept has been further developed in order to fix that issue. The resulting approach is Garlich Routing (GR), which was first outlined by Michael J. Freedman in 2000. The principle behind GR is to bundle several messages together and to encrypt them afterwards like an onion, according to the concept of mix nets. That means, that a sender first puts a number of messages together and encrypts them with the public keys of the chain nodes along the previously chosen path. The encryption scheme can be compared to the layers and the content of a garlic. As soon as the encryption layer are removed, a node finds the previously assembled messages to be transmitted. The main advantage behind this scheme are the encapsulation of several transmission routes within one packet, which means that the previous nodes, before the end node of a chain, cannot see that the transmitted package contains several messages. Another advantage is, that the robustness of packet delivery is increased by that mechanism as the path redundancy is increased. Compared to mix nets, OR is not restricted to a specific packet size but is able to vary it. In connection to an attacker who attempts a (previously described) end-to-end size or node centered correlation attack, GR has the advantage that a big packet is split up into smaller packets along its transmission path. That means an attacker can never correlate the packet size from the sender to the receiver. He could only track a packet via its size from the beginning of a chain to the end node. However as the end node splits up the garlic and transmits the messages individually, his tracking attempt will fail at last at the end node. Therefore GR covers at least size-correlation attacks as well as tracking attempts and seems to be a practicable compromise between OR and mix nets. The major application where Garlic Routing is implemented (with some modifications) is I2P [XX]. I2P (also known as the Invisible Internet Project) is an Open Source Project which provides similarly to the Tor framework anonymity for messages, sent across networks like the World Wide Web. It uses GR to build unidirectional communication tunnels. Because of their unidirectional usage each network agent creates one outbound and one inbound tunnel in order to establish a communication with one another. Through that tunnels I2P sends Garlic Messages, whereas each Garlic bulb contains all delivery instructions which are needed to deliver it to the right client and as soon as a message reached its destination, the destination sends a Delivery Status Message back to the sender to signal him whether the message delivery had been successful or not. All in all I2P does not only rely on Garlic Routing but complements it with EIGamal/AES encryption and pseudonymization mechanisms. 
+
+\section{Evaluation}
 
 \section{Conclusions}
 
