Paper 100% in its Review Version

--- a/paper/onion.bib
+++ b/paper/onion.bib
@@ -1,7 +1,147 @@
-@BOOK{Lamport:LaTeX,
-	AUTHOR = "Leslie Lamport",
-	TITLE = "LaTeX User's Guide and Document Reference Manual",
-	PUBLISHER = "Addison-Wesley Publishing Company",
-	ADDRESS = "Reading, Massachusetts",
-	YEAR = "1986" }
+@article{reed1998anonymous,
+  title={Anonymous connections and onion routing},
+  author={Reed, Michael G and Syverson, Paul F and Goldschlag, David M},
+  journal={Selected Areas in Communications, IEEE Journal on},
+  volume={16},
+  number={4},
+  pages={482--494},
+  year={1998},
+  publisher={IEEE}
+}
+
+@online{tor,
+  author = {The Tor Project, Inc},
+  title = {Tor Project: Anonymity Online},
+  year = {2014},
+  url = {https://www.torproject.org/},
+  urldate = {2014-11-27}
+}
+
+@article{diffie1976new,
+  title={New directions in cryptography},
+  author={Diffie, Whitfield and Hellman, Martin E},
+  journal={Information Theory, IEEE Transactions on},
+  volume={22},
+  number={6},
+  pages={644--654},
+  year={1976},
+  publisher={IEEE}
+}
+
+@article{diffie1992authentication,
+  title={Authentication and authenticated key exchanges},
+  author={Diffie, Whitfield and Van Oorschot, Paul C and Wiener, Michael J},
+  journal={Designs, codes and cryptography},
+  volume={2},
+  number={2},
+  pages={107--125},
+  year={1992},
+  publisher={Springer}
+}
+
+@techreport{dingledine2004tor,
+  title={Tor: The second-generation onion router},
+  author={Dingledine, Roger and Mathewson, Nick and Syverson, Paul},
+  year={2004},
+  institution={DTIC Document}
+}
+
+@inproceedings{panchenko2011website,
+  title={Website fingerprinting in onion routing based anonymization networks},
+  author={Panchenko, Andriy and Niessen, Lukas and Zinnen, Andreas and Engel, Thomas},
+  booktitle={Proceedings of the 10th annual ACM workshop on Privacy in the electronic society},
+  pages={103--114},
+  year={2011},
+  organization={ACM}
+}
+
+@online{torspec,
+  author = {The Tor Project, Inc},
+  title = {Tor's protocol specifications},
+  year = {2014},
+  url = {https://gitweb.torproject.org/torspec.git/},
+  urldate = {2014-11-26}
+}
+
+@incollection{shmatikov2006timing,
+  title={Timing analysis in low-latency mix networks: Attacks and defenses},
+  author={Shmatikov, Vitaly and Wang, Ming-Hsiu},
+  booktitle={Computer Security--ESORICS 2006},
+  pages={18--33},
+  year={2006},
+  publisher={Springer}
+}
+
+@online{eavesdrop,
+  author = {Conde Nast International, Inc},
+  title = {Rogue Nodes Turn Tor Anonymizer Into Eavesdropper`s Paradise},
+  year = {2014},
+  url = "",
+  urldate = {2014-11-26}
+}
+
+@article{wright2004predecessor,
+  title={The predecessor attack: An analysis of a threat to anonymous communications systems},
+  author={Wright, Matthew K and Adler, Micah and Levine, Brian Neil and Shields, Clay},
+  journal={ACM Transactions on Information and System Security (TISSEC)},
+  volume={7},
+  number={4},
+  pages={489--522},
+  year={2004},
+  publisher={ACM}
+}
+
+@article{chaum1981untraceable,
+  title={Untraceable electronic mail, return addresses, and digital pseudonyms},
+  author={Chaum, David L},
+  journal={Communications of the ACM},
+  volume={24},
+  number={2},
+  pages={84--90},
+  year={1981},
+  publisher={ACM}
+}
+
+@phdthesis{dingledine2000free,
+  title={The free haven project: Design and deployment of an anonymous secure data haven},
+  author={Dingledine, Roger R},
+  year={2000},
+  school={Citeseer}
+}
+
+@online{i2p,
+  author = {Tassilo Schweyer},
+  title = {I2P Anonymous Network},
+  year = {2014},
+  url = {https://geti2p.net/en/},
+  urldate = {2014-11-25}
+}
+
+@article{reiter1998crowds,
+  title={Crowds: Anonymity for web transactions},
+  author={Reiter, Michael K and Rubin, Aviel D},
+  journal={ACM Transactions on Information and System Security (TISSEC)},
+  volume={1},
+  number={1},
+  pages={66--92},
+  year={1998},
+  publisher={ACM}
+}
+
+@online{torhacked,
+  author = {AnonHQ},
+  title = {Tor Browser HACKED, Not Longer Safe and Anonymous},
+  year = {2014},
+  url = {http://anonhq.com/tor-browser-hacked-not-longer-safe-and-anonymous/},
+  urldate = {2014-11-24}
+}
+
+@misc{ORpublications,
+  author = {Paul Syverson},
+  title = {Onion Routing: Publications},
+  year = {2014},
+  howbublished = "Website"
+  note = \url{http://www.onion-router.net/Publications.html}; accessed: November 24, 2014.
+}
+
 
